--- a/src/main/graphic_elements/EndgameScene.fxml
+++ b/src/main/graphic_elements/EndgameScene.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
+<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,36 +21,36 @@
    <children>
       <AnchorPane prefHeight="388.0" prefWidth="296.0">
          <children>
-            <ImageView fitHeight="400.0" fitWidth="300.0">
+            <ImageView fitHeight="803.0" fitWidth="641.0">
                <image>
                   <Image url="@/GraphicResources/misc/sfondo parquet.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="134.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="157.0" fitWidth="480.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@/GraphicResources/Publisher material/Title 2000x618px.png" />
                </image>
             </ImageView>
-            <TextArea blendMode="MULTIPLY" editable="false" layoutY="94.0" prefHeight="306.0" prefWidth="300.0" promptText="Ranking" text="#textArea2">
+            <TextArea blendMode="MULTIPLY" editable="false" layoutY="154.0" prefHeight="647.0" prefWidth="636.0" promptText="Ranking" text="#textArea2">
                <font>
-                  <Font name="Ravie" size="20.0" />
+                  <Font size="60.0" />
                </font>
             </TextArea>
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="437.0" prefWidth="309.0" GridPane.columnIndex="1">
          <children>
-            <ImageView fitHeight="400.0" fitWidth="300.00" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ImageView fitHeight="806.0" fitWidth="638.0" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@/GraphicResources/misc/base_pagina2.jpg" />
                </image>
             </ImageView>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="312.0" prefWidth="302.0" text="#textArea2" textAlignment="CENTER" textFill="#efd393" textOverrun="CLIP" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
-                  <Font name="Ravie" size="24.0" />
+                  <Font size="50.0" />
                </font>
             </Label>
-            <ImageView fitHeight="104.0" fitWidth="302.0" layoutY="312.0" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ImageView fitHeight="180.0" fitWidth="724.0" layoutY="312.0" preserveRatio="true" AnchorPane.bottomAnchor="620.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-84.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@/GraphicResources/Publisher material/banner 1386x400px.png" />
                </image>
