--- a/src/main/graphic_elements/NumberOfPlayers.fxml
+++ b/src/main/graphic_elements/NumberOfPlayers.fxml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<TitledPane fx:id="BackFrame" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="MY_SHELFIE" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
+<TitledPane fx:id="BackFrame" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="MY_SHELFIE" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
   <content>
-    <AnchorPane fx:id="GeneralPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+    <AnchorPane fx:id="GeneralPane" minHeight="0.0" minWidth="0.0" prefHeight="800.0" prefWidth="1280.0">
          <children>
-            <ImageView fx:id="BackgroundImage" fitHeight="374.0" fitWidth="600.0">
+            <ImageView fx:id="BackgroundImage" fitHeight="788.0" fitWidth="1286.0">
                <image>
                   <Image url="@/GraphicResources/misc/sfondo parquet.jpg" />
                </image>
             </ImageView>
-            <ButtonBar fx:id="numberOfPlayersButtons" layoutX="174.0" layoutY="162.0">
+            <ButtonBar fx:id="numberOfPlayersButtons" layoutX="450.0" layoutY="282.0" prefHeight="146.0" prefWidth="297.0">
                <buttons>
-                  <Button fx:id="twoPlayersButton" mnemonicParsing="false" onAction="#setNumber2" text="2" />
-                  <Button fx:id="threePlayersButton" mnemonicParsing="false" onAction="#setNumber3" text="3" />
-                  <Button fx:id="fourPlayersButton" mnemonicParsing="false" onAction="#setNumber4" text="4" />
+                  <Button fx:id="twoPlayersButton" mnemonicParsing="false" onAction="#setNumber2" prefHeight="65.0" prefWidth="65.0" text="2" />
+                  <Button fx:id="threePlayersButton" mnemonicParsing="false" onAction="#setNumber3" prefHeight="65.0" prefWidth="65.0" text="3" />
+                  <Button fx:id="fourPlayersButton" mnemonicParsing="false" onAction="#setNumber4" prefHeight="65.0" prefWidth="65.0" text="4" />
                </buttons>
             </ButtonBar>
-            <Text fx:id="BoxText" fill="#4a3a10" layoutX="171.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SCEGLI IL NUMERO DI GIOCATORI">
+            <Text fx:id="BoxText" fill="#4a3a10" layoutX="424.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SCEGLI IL NUMERO DI GIOCATORI" textAlignment="CENTER">
                <font>
-                  <Font name="Noteworthy Light" size="18.0" />
+                  <Font name="Noteworthy Light" size="29.0" />
                </font>
             </Text>
          </children></AnchorPane>
