--- a/src/main/graphic_elements/testStart.fxml
+++ b/src/main/graphic_elements/testStart.fxml
@@ -15,7 +15,7 @@
          <children>
             <ImageView fx:id="BackgroundImage" fitHeight="772.0" fitWidth="1293.0" layoutX="-1.0" layoutY="-2.0">
                <image>
-                  <Image url="@/GraphicResources/misc/sfondo parquet.jpg" />
+                  <Image url="@/GraphicResources/Publisher material/Display_5.jpg" />
                </image>
             </ImageView>
             <ImageView fx:id="TitleImage" fitHeight="150.0" fitWidth="482.0" layoutX="403.0" layoutY="9.0">
