--- a/src/main/graphic_elements/testStart.fxml
+++ b/src/main/graphic_elements/testStart.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<TitledPane id="StartFrame" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="MY_SHELFIE" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
+<TitledPane id="StartFrame" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="MY_SHELFIE" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
          <children>
@@ -23,7 +20,7 @@
                   <Image url="@/GraphicResources/Publisher material/Title 2000x618px.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="240.0" fitWidth="240.0" layoutX="2.0" layoutY="550.0">
+            <ImageView fitHeight="240.0" fitWidth="240.0" layoutX="1052.0" layoutY="534.0">
                <image>
                   <Image url="@/GraphicResources/Publisher material/Publisher.png" />
                </image>
@@ -44,6 +41,10 @@
                   <Font name="Noteworthy Light" size="36.0" />
                </font>
             </Text>
+            <TextArea layoutX="-1.0" layoutY="733.0" prefHeight="37.0" prefWidth="1070.0">
+               <effect>
+                  <ColorInput />
+               </effect></TextArea>
          </children></AnchorPane>
   </content>
 </TitledPane>
