--- a/src/main/graphic_elements/WaitingRoom.fxml
+++ b/src/main/graphic_elements/WaitingRoom.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<TitledPane fx:id="WaitingRoom" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="IN ATTESA CHE ARRIVINO TUTTI I GIOCATORI" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
+<TitledPane fx:id="WaitingRoom" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="IN ATTESA CHE ARRIVINO TUTTI I GIOCATORI" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: Lavender;">
          <children>
@@ -41,6 +38,11 @@
                   <Font name="Noteworthy Light" size="33.0" />
                </font>
             </Text>
+            <TextArea editable="false" layoutX="644.0" layoutY="413.0" prefHeight="141.0" prefWidth="374.0">
+               <effect>
+                  <ColorInput />
+               </effect>
+            </TextArea>
          </children></AnchorPane>
   </content>
 </TitledPane>
