--- a/src/main/graphic_elements/testStart.fxml
+++ b/src/main/graphic_elements/testStart.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.effect.ColorInput?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<TitledPane id="StartFrame" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="MY_SHELFIE" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
+<TitledPane id="StartFrame" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" text="MY_SHELFIE" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VIEW.GraphicInterface">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
          <children>
@@ -30,18 +34,17 @@
                   <Font name="Noteworthy Light" size="21.0" />
                </font>
             </Button>
-            <TextField fx:id="nickField" layoutX="408.0" layoutY="308.0" prefHeight="60.0" prefWidth="474.0" style="-fx-background-color: white;">
+            <TextArea fx:id="nickField" editable="true" layoutX="408.0" layoutY="308.0" prefHeight="60.0" prefWidth="474.0" style="-fx-background-color: white;">
                <font>
                   <Font name="Ravie" size="12.0" />
                </font>
-            </TextField>
-            <AnchorPane layoutX="80.0" layoutY="118.0" prefHeight="482.0" prefWidth="1151.0" />
+            </TextArea>
             <Text fill="#750505" layoutX="406.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-text-origin: CENTER;" text="INSERISCI IL TUO NICKNAME" textAlignment="CENTER" wrappingWidth="480.3389587402344">
                <font>
                   <Font name="Noteworthy Light" size="36.0" />
                </font>
             </Text>
-            <TextArea fx:id="nickErrorArea" layoutX="-1.0" layoutY="733.0" prefHeight="37.0" prefWidth="1070.0" editable="false">
+            <TextArea fx:id="nickErrorArea" editable="false" layoutX="-1.0" layoutY="733.0" prefHeight="37.0" prefWidth="1070.0">
                <effect>
                   <ColorInput />
                </effect></TextArea>
